--- a/style.css
+++ b/style.css
@@ -1,86 +1,116 @@
-:root {
-  --header: 3rem;
-  --footer: 40px;
-  --main: calc(100vh - calc(var(--header) + var(--footer)));
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
-  border: 0px solid transparent;
-  background-color: white;
-}
-
-#container{
-  border: 0px solid transparent;
-  height: 100vh;
-  color: #1f2a65;
-}
-
-#container > * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#header {
-  height: var(--header);
   background-color: #f1ddae;
+  padding: 0;
+  margin: 0;
 }
 
-#mainContent {
-  height: var(--main);
-  margin-right: auto;
-  margin-left: auto;
-  background-color: rgb(244, 244, 244);
-  position: relative;
-}
-
-#footer {
-  height: var(--footer);
-  background-color: #f1ddae;
-}
-
-.image_container {
+.contain {
   height: 100%;
-  position: absolute;
-  left: 0px;
+  margin: 0;
+}
+
+h1 {
+  font-family: Bonheur Royale, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 100px;
+  margin: 0px;
+}
+
+h3,
+ul {
+  margin: 0;
+}
+
+h3 {
+  margin-bottom: 1rem;
+}
+
+input:focus,
+textarea:focus {
+  outline: 3px solid gold;
+}
+
+input,
+textarea,
+button {
+  width: 100%;
+  border: 1px solid #000;
+}
+
+.wrapper {
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+.wrapper > * {
+  padding: 1em;
+}
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .wrapper > * {
+    padding: 2em 2em;
+  }
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin-top: -10px;
+
+}
+
+.contacts {
+  background-image: url(/Form-Validation-TOP/images/room-living-room_corn-silk__40yy-77_242.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color:  #003366;
 }
 
 img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+  object-fit:contain
 }
 
-.form_container {
-  height: 100%;
-  position: absolute;
-  right: 0px;
-  width: 50%;
-}
-
-p {
-  object-fit: contain;
+.form {
+  background: rgb(235, 235, 235);
+  color: #003366;
 }
 
 form {
-  object-fit: contain;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+form label {
+  display: block;
+}
+form p {
+  margin: 0;
 }
 
-fieldset {
-  border: 2px solid #c5c1b6;
-  background-color:  white;
-  display: flex;
-  flex-direction: column;
-  object-fit: contain;
+.full-width {
+  grid-column: 1 / 3;
 }
 
-label {
-  font-size: 15px;
+button,
+input,
+textarea {
+  padding: 1em;
 }
 
-input {
-  height: 15px;
-  width: 50px;
+button {
+  background: rgb(191, 190, 190);
+  width: 100%;
+  border: 0;
+}
+button:hover, button:focus {
+  background:  #003366;
+  outline: 0;
+  color: #f1ddae;
 }
